Homepage+ Pre Alpha v0.1.1
Added Background and Fadein animation.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Homepage+</title>
 </head>
 <body>
-<div class="main-area">
+<div class="main-area" id="fade">
     <div class="time-piece">
         <p id="time-text"></p>
         <p id="time-date"></p>
     </div>
+    <i class="background"></i>
 </div>
 <script src="jquery/jquery-3.3.1.js"></script>
 <script src="moment.js"></script>
