--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>Homepage+</title>
+    <script src="jquery/jquery-3.3.1.js"></script>
+    <script src="libraries/moment.js"></script>
+    <script src="libraries/sugar.js"></script>
+    <script src="libraries/weather.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-<div class="main-area" id="fade">
-    <div class="time-piece">
-        <p id="time-text"></p>
-        <p id="time-date"></p>
+    <div class="main-area" id="fade">
+        <div class="time-piece">
+            <p id="time-text"></p>
+            <p id="time-date"></p>
+        </div>
+        <i class="background"></i>
+        <div class="weather">
+
+        </div>
+        <div class="select-overlay"></div>
     </div>
-    <i class="background"></i>
-</div>
-<script src="jquery/jquery-3.3.1.js"></script>
-<script src="moment.js"></script>
-<script src="script.js"></script>
 </body>
 </html>
