--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 </head>
 <body>
     <div class="main-area" id="fade">
-        <div class="time-piece">
-            <p id="time-text"></p>
-            <p id="time-date"></p>
+        <div class="parallax">
+            <div class="time-piece">
+                <p id="time-text"></p>
+                <p id="time-date"></p>
+            </div>
+            <div class="weather">
+            </div>
+            <div class="select-overlay"></div>
         </div>
-        <i class="background"></i>
-        <div class="weather">
-
-        </div>
-        <div class="select-overlay"></div>
+        <div class="background"></div>
     </div>
 </body>
 </html>
