--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>Homepage+</title>
     <script src="jquery/jquery-3.3.1.js"></script>
