--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p id="time-text"></p>
                 <p id="time-date"></p>
             </div>
-            <div class="weather">
+            <div class="weather" city="Auckland" country="NZ">
             </div>
             <div class="select-overlay"></div>
             <div class="credit"><p>Made by Huzz.<br>
