--- a/london.html
+++ b/london.html
@@ -18,7 +18,7 @@
                 <p id="time-text"></p>
                 <p id="time-date"></p>
             </div>
-            <div class="weather" city="Trondheim" country="Norway">
+            <div class="weather" city="London" country="UK">
             </div>
             <div class="select-overlay"></div>
             <div class="credit"><p>Made by Huzz.<br>
