--- a/napoli.html
+++ b/napoli.html
@@ -18,10 +18,10 @@
                 <p id="time-text"></p>
                 <p id="time-date"></p>
             </div>
-            <div class="weather" city="Trondheim" country="Norway">
+            <div class="weather" city="Napoli" country="Italy">
             </div>
             <div class="select-overlay"></div>
-            <div class="credit"><p>Made by Huzz.<br>
+            <div class="credit"><p>Made by Huzz.<br>drenthe.html
                 If any issues arise, please contact <b>Huzz</b>#2019 on discord!</p></div>
         </div>
         <div class="background"></div>
