--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>Homepage+</title>
+    <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     <script src="jquery/jquery-3.3.1.js"></script>
     <script src="libraries/moment.js"></script>
     <script src="libraries/sugar.js"></script>
@@ -18,7 +19,7 @@
                 <p id="time-text"></p>
                 <p id="time-date"></p>
             </div>
-            <div class="weather" city="Auckland" country="NZ">
+            <div class="weather">
             </div>
             <div class="select-overlay"></div>
             <div class="credit"><p>Made by Huzz.<br>
