--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="A simple, and minimalistic Home Page webpage.">
+    <meta name="keywords" content="Wallpaper,Simple,Minimalistic,Homepage,Time,Weather">
+    <meta name="author" content="Huzz - Huzz#2019 on Discord">
     <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>Homepage+</title>
