--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <div class="weather">
             </div>
             <div class="select-overlay"></div>
-            <div class="credit"><p>Made by Huzz.<br>
-                If any issues arise, please contact <b>Huzz</b>#2019 on discord!</p></div>
+            <div class="greeting"><p>Good Morning!</p></div>
         </div>
         <div class="background"></div>
     </div>
