--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="weather">
             </div>
             <div class="select-overlay"></div>
-            <div class="greeting"><p>Good Morning!</p></div>
+            <div class="greeting"><p class="greeting-text"></p></div>
         </div>
         <div class="background"></div>
     </div>
