--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A simple, and minimalistic Home Page webpage.">
+    <meta name="description" content="A simple, and minimalistic Homepage!">
     <meta name="keywords" content="Wallpaper,Simple,Minimalistic,Homepage,Time,Weather">
-    <meta name="author" content="Huzz - Huzz#2019 on Discord">
+    <meta name="author" content="Huzz - Huzz#0002 on Discord">
     <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>Homepage+</title>
@@ -26,6 +26,7 @@
             </div>
             <div class="select-overlay"></div>
             <div class="greeting"><p class="greeting-text"></p></div>
+            <div class="year-count"><p>Today is the <b id="yc-day"></b><sup id="yc-day-suffix"></sup> day of <b id="yc-year"></b><sup>(<b id="yc-quarter"></b>)</sup>, on the <b id="yc-week"></b><sup id="yc-week-suffix"></sup> week.</p></div>
         </div>
         <div class="background"></div>
     </div>
