--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 </head>
 <body>
     <div class="main-area" id="fade">
+        <div class="quick-access">
+            <a class="qa-button" href="https://www.reddit.com/"><div class="qa-icon" id="reddit"></div></a>
+            <a class="qa-button" href="https://mail.google.com/"><div class="qa-icon" id="gmail"></div></a>
+            <a class="qa-button" href="https://drive.google.com/"><div class="qa-icon" id="gdrive"></div></a>
+            <a class="qa-button" href="https://outlook.live.com/"><div class="qa-icon" id="outlook"></div></a>
+            <a class="qa-button" href="https://www.youtube.com/"><div class="qa-icon" id="youtube"></div></a>
+            <a class="qa-button" href="https://www.twitter.com/"><div class="qa-icon" id="twitter"></div></a>
+            <a class="qa-button" href="https://www.facebook.com"><div class="qa-icon" id="facebook"></div></a>
+            <a class="qa-button" href="https://store.steampowered.com/"><div class="qa-icon" id="steam"></div></a>
+        </div>
         <div class="parallax">
             <div class="time-piece">
                 <p id="time-text"></p>
