--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <div class="main-area" id="fade">
+        <div class="overlay"></div>
         <div class="quick-access">
             <a class="qa-button" href="https://www.reddit.com/"><div class="qa-icon" id="reddit"></div></a>
             <a class="qa-button" href="https://mail.google.com/"><div class="qa-icon" id="gmail"></div></a>
