Changed Homepage Title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Huzz - Huzz#0009 on Discord">
     <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <title>Homepage+</title>
+    <title>h/Homepage+</title>
     <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     <script src="jquery/jquery-3.3.1.js"></script>
     <script src="libraries/moment.js"></script>
