--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="A simple, and minimalistic Homepage!">
     <meta name="keywords" content="Wallpaper,Simple,Minimalistic,Homepage,Time,Weather">
     <meta name="author" content="Huzz - Huzz#0009 on Discord">
+    <meta content="huzz.io/homepage" property="og:site_name">
+    <meta name="theme-color" content="#ffff00"
     <link rel="icon" type="png/jpeg" href="images/icon-256.png">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <title>h/Homepage+</title>
