--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A simple, and minimalistic Homepage!">
+    <meta name="description" content="Simple and minimalistic Homepage.">
     <meta name="keywords" content="Wallpaper,Simple,Minimalistic,Homepage,Time,Weather">
     <meta name="author" content="Huzz - Huzz#0009 on Discord">
     <meta content="huzz.io/homepage" property="og:site_name">
